# slide

./: .gitignore  Cargo.toml
src/: lib.rs  lz.rs  main.rs  search_buffer.rs  slide.rs  util.rs
src/lz/: item.rs  mod.rs
