[package]
name = "slide"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"

[dependencies]
serde = "1.0.219"
postcard = { version = "1.1.3", features = ["use-std"] }
smallvec = "1.15.1"
var_int = { git = "https://github.com/Wulf0x67E7/var-int" }
